site/assets/scss/globals/_colours.scss
$primary-colour: #FFC300;
$secondary-colour : #001D3D;
$rich-black : #000814;
$black : black;
$white : white;
$grey : #E6E6E6;

.fc-black {
    color: $black;
}

.fc-secondary {
    color: $secondary-colour;
}

$secondary-colour : #001d3d85;

